Working android prototype